feat: 系统架构优化和功能完善
- 新增BaseExceptionHandler和ControllerExceptionAspect异常处理
- 重构service-base模块，增加ServiceLayerExceptionAspect
- 优化Gateway模块的异常处理和过滤器
- 重构User模块，删除冗余异常类和备份文件
- 新增sys_user_field_refactor.sql数据库重构脚本
- 优化ThirdPartyConfig相关DTO和实体类
- 完善测试配置和测试用例
- 清理项目结构，提升代码质量